added test form

--- a/src/app/forms/pickup-form/pickup-form.component.html
+++ b/src/app/forms/pickup-form/pickup-form.component.html
@@ -1,14 +1,9 @@
 <form [formGroup]="formGroup">
-  <bd-form-datetimepicker
+  <bd-form-datepicker
     class="bd-form-control"
     formControlName="date"
   >
-  </bd-form-datetimepicker>
-  <!-- <bd-form-datepicker
-    class="bd-form-control"
-    formControlName="date"
-  >
-  </bd-form-datepicker> -->
+  </bd-form-datepicker>
   <pick-up-commodity-form
     [formArray]="formGroup.controls.commodities"
     (update)="onCommodityUpdate($event)"
