FSPA-395 code refactoring

--- a/src/app/drivers/components/driver-detail/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail/driver-detail.component.html
@@ -4,4 +4,5 @@
   <form-navigation [title]="'Driver'" [anchors]="anchors">
   </form-navigation>
   <driver-view-form [driver]="selectedItem"></driver-view-form>
+  <!-- <driver-view [driver]="selectedItem"></driver-view> -->
 </div>
