FSPA-395 #comment remove odd code

--- a/src/app/drivers/components/driver-detail/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail/driver-detail.component.html
@@ -3,6 +3,5 @@
   </bd-button>
   <form-navigation [title]="'Driver'" [anchors]="anchors">
   </form-navigation>
-  <driver-view-form [driver]="selectedItem"></driver-view-form>
-  <!-- <driver-view [driver]="selectedItem"></driver-view> -->
+  <driver-view [driver]="selectedItem"></driver-view>
 </div>
