--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -1,18 +1,18 @@
-<div>
+<div *ngIf="selectedItem">
 <form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
 <form>
     <navigation-anchor id="customer"></navigation-anchor>
     <bd-view-detail-section [labelText]="'Customer'" [changeButton]="true" [addButton]="true">
-        <customer-detail [company]="load.customer"></customer-detail>
+        <customer-detail [company]="selectedItem.customer"></customer-detail>
     </bd-view-detail-section>
- <navigation-anchor id="requirements"></navigation-anchor>
+    <navigation-anchor id="requirements"></navigation-anchor>
     <bd-view-detail-section [labelText]="'Requirements'" [changeButton]="true" [addButton]="true">
-        <requirements-detail [load]="load"></requirements-detail>
+        <requirements-detail [load]="selectedItem"></requirements-detail>
     </bd-view-detail-section>
     <navigation-anchor id="itinerary"></navigation-anchor>
     <bd-view-detail-section [labelText]="'Itinerary'" [changeButton]="true" [addButton]="true">
         <stop-view 
-            *ngFor="let stop of load.stops"
+            *ngFor="let stop of selectedItem.stops"
             [stop]="stop">
         </stop-view>
     </bd-view-detail-section>
