--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -29,14 +29,14 @@
           </filter-container>
         </div>
         <div [hidden]="isFilterActive">
-          <load-stop-cards [selected]="selected" [loads]="items"></load-stop-cards>
+          <load-stop-cards [selected]="selected" (select)='onSelect($event)' [loads]="items"></load-stop-cards>
         </div>
       </div>
     </bd-infinite-scroll>
   </first-pane>
 
   <second-pane>
-      <load-detail></load-detail>
+      <router-outlet name="detailOutlet"></router-outlet>
   </second-pane>
   <third-pane>
     <router-outlet></router-outlet>
