FSPA-384 refactor disabled form in Company

--- a/src/app/companies/components/company-edit.component.html
+++ b/src/app/companies/components/company-edit.component.html
@@ -9,7 +9,7 @@
   <company-form
     [disabled]="isLoading"
     [scrollable]="true"
-    [company]="selectedItem"
+    [company]="selected$ | async"
     [viewMode]="viewMode"
     (save)="onItemSave($event)"
     (cancel)="onItemCancel()">
