--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -5,6 +5,7 @@
     </div>
   </first-pane>
   <second-pane>
+    <router-outlet name="detailOutlet"></router-outlet>
   </second-pane>
   <third-pane>
     <router-outlet></router-outlet>
