--- a/src/app/forms/company-form/company-form.component.html
+++ b/src/app/forms/company-form/company-form.component.html
@@ -2,22 +2,22 @@
 	<form [formGroup]="companyForm" novalidate (ngSubmit)="submit(companyForm.value, companyForm.valid)">
 		<navigation-anchor id="company-basic-information" [isNestedForm]="isNestedForm"></navigation-anchor>
 		<bd-form-section [disabled]="disabled" [labelText]="'COMPANY > BASIC INFORMATION'" [isExpanded]='isExpanded'>
-			<bd-input class="bd-form-control" [disabled]="disabled" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
+			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
 			</bd-input>
-			<bd-dropdown class="bd-form-control" [disabled]="disabled" [labelText]="'Company type'" formControlName="type" [items]="companyTypes">
+			<bd-dropdown class="bd-form-control" [labelText]="'Company type'" formControlName="type" [items]="companyTypes">
 			</bd-dropdown>
-			<bd-form-switch class="bd-form-control" [disabled]="disabled" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status"
+			<bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status"
 			 [items]="companyStatuses">
 			</bd-form-switch>
 			<bd-validator [component]="companyForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
-				<bd-input class="bd-form-control" [disabled]="disabled" [labelText]="'MC #'" formControlName="mc">
+				<bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
 				</bd-input>
 			</bd-validator>
-			<bd-input class="bd-form-control" [disabled]="disabled" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
+			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
 			</bd-input>
 		</bd-form-section>
 		<navigation-anchor id="company-addresses" [isNestedForm]="isNestedForm"></navigation-anchor>
-		<bd-form-section [labelText]="'COMPANY > LOCATIONS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
+		<bd-form-section [disabled]="disabled" [labelText]="'COMPANY > LOCATIONS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
 			<locations-form [formArray]='companyForm.controls.locations' (update)="onLocationUpdate($event)" [disabled]="disabled" (remove)="onLocationRemove($event)"
 			 (add)="onLocationAdd($event)" [items]='locations$ | async' [viewMode]="viewMode"></locations-form>
 		</bd-form-section>
