--- a/src/app/forms/driver-form/driver-form.component.html
+++ b/src/app/forms/driver-form/driver-form.component.html
@@ -1,28 +1,28 @@
 <form [formGroup]="driverForm" novalidate (ngSubmit)="submit(driverForm.value, driverForm.valid)">
 	<navigation-anchor id="driver-personal-information" [isNestedForm]="isNestedForm"></navigation-anchor>
-	<bd-form-section [labelText]="'PERSONAL INFO'">
+	<bd-form-section [disabled]="disabled" [labelText]="'PERSONAL INFO'">
 		<bd-input class="bd-form-control" formControlName="firstName" [labelText]="'First Name'"></bd-input>
 		<bd-input class="bd-form-control" formControlName="lastName" [labelText]="'Last Name'"></bd-input>
 		<bd-form-datepicker class="bd-form-control" formControlName="dateOfBirth" [labelText]="'Date Of Birth'"></bd-form-datepicker>
 		<bd-input class="bd-form-control" formControlName="ssn" [labelText]="'SSN'"></bd-input>
 	</bd-form-section>
 	<navigation-anchor id="driver-contact" [isNestedForm]="isNestedForm"></navigation-anchor>
-	<bd-form-section [labelText]="'CONTACT'" >
+	<bd-form-section [disabled]="disabled" [labelText]="'CONTACT'" >
     <contacts-info-form [items]="driver.contactInfo" [formArray]='driverForm.controls.contactInfo' [disabled]="disabled" [viewMode]="viewMode"></contacts-info-form>
 	</bd-form-section>
 	<navigation-anchor id="driver-address" [isNestedForm]="isNestedForm"></navigation-anchor>
-	<bd-form-section [labelText]="'ADDRESS'" >
+	<bd-form-section [disabled]="disabled" [labelText]="'ADDRESS'" >
 		<address-form [group]='driverForm.controls.address' [disabled]="disabled" [address]='driver.address' [viewMode]="viewMode" ></address-form>
 	</bd-form-section>
 	<navigation-anchor id="driver-payment" [isNestedForm]="isNestedForm"></navigation-anchor>
-	<bd-form-section [labelText]="'PAYMENT'">
+	<bd-form-section [disabled]="disabled" [labelText]="'PAYMENT'">
 		<bd-dropdown class="bd-form-control" formControlName="paymentType" [labelText]="'Payment options'" [items]="paymentsTypes">
 		</bd-dropdown>
 		<bd-input class="bd-form-control" formControlName="rate" [labelText]="'Rate'">
 		</bd-input>
 	</bd-form-section>
 	<navigation-anchor id="driver-license" [isNestedForm]="isNestedForm"></navigation-anchor>
-	<bd-form-section [labelText]="'LICENSE'">
+	<bd-form-section [disabled]="disabled" [labelText]="'LICENSE'">
 		<license-form [group]='driverForm.controls.license' [disabled]="disabled" [license]='driver.license' [viewMode]="viewMode"></license-form>
 	</bd-form-section>
 	<form-sticky-bottom-container [sticky]="!isNestedForm" *ngIf="isEditMode">
