--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -9,3 +9,25 @@
   text-overflow: ellipsis;
   //sass-lint:enable no-vendor-prefixes
 }
+
+@mixin driver-view-form-container {
+  display: flex;
+  width: 100%;
+  padding: 0 $default-margin;
+  background: $white;
+  font-size: $tiny-font-size;
+  line-height: $element-height;
+  border-bottom: $border;
+
+  .left {
+    width: 50%;
+    padding: $default-margin 0;
+    border-right: $border;
+  }
+
+  .right {
+    width: 50%;
+    padding: $default-margin;
+    color: $dark-grey;
+  }
+}
