--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -2,15 +2,15 @@
 <form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
 <form>
     <navigation-anchor id="customer"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'Customer'" [changeButton]="true" [addButton]="true">
+    <bd-view-detail-section [labelText]="'Customer'" [changeButton]="false" [addButton]="false">
         <customer-detail [company]="selectedItem.customer" [selectedContact]="selectedContact"></customer-detail>
     </bd-view-detail-section>
     <navigation-anchor id="requirements"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'Requirements'" [changeButton]="true" [addButton]="true">
+    <bd-view-detail-section [labelText]="'Requirements'" [changeButton]="false" [addButton]="false">
         <requirements-detail [load]="selectedItem"></requirements-detail>
     </bd-view-detail-section>
     <navigation-anchor id="itinerary"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'Itinerary'" [changeButton]="true" [addButton]="true">
+    <bd-view-detail-section [labelText]="'Itinerary'" [changeButton]="false" [addButton]="false">
         <stop-view 
             *ngFor="let stop of selectedItem.stops"
             [stop]="stop">
