--- a/src/app/drivers/components/driver-equipment-associations/driver-equipment-associations.component.html
+++ b/src/app/drivers/components/driver-equipment-associations/driver-equipment-associations.component.html
@@ -17,3 +17,8 @@
     </div>
   </div>
 </div>
+
+<div class="price">
+  <span>{{paymentTypeText}}:</span>
+  <span class="rate">$ {{driver.rate}}</span>
+</div>
