--- a/src/assets/styles/font-icons.scss
+++ b/src/assets/styles/font-icons.scss
@@ -191,3 +191,26 @@
   }
 }
 
+.icon-left-arrow {
+  &:before {
+    content: '\e920';
+  }
+}
+
+.icon-right-arrow {
+  &:before {
+    content: '\e921';
+  }
+}
+
+.icon-left-arrow-bold {
+  &:before {
+    content: '\e91e';
+  }
+}
+
+.icon-right-arrow-bold {
+  &:before {
+    content: '\e91f';
+  }
+}
