--- a/src/app/drivers/components/driver-detail/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail/driver-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="selectedItem">
   <form-navigation [title]="driverFullName" [anchors]="anchors">
-      <bd-form-button [buttonText]="'EDIT'" buttonType="small" (click)="onEdit()">
+      <bd-form-button [buttonText]="'change'" buttonType="small" (click)="onEdit()">
       </bd-form-button>
   </form-navigation>
   <div class="driver-detail-container">
