--- a/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
+++ b/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
@@ -1,5 +1,5 @@
 <div
 class="bd-form-datepicker-container"
 (clickOutside)="onClickOutside($event)">
-  <bd-datepicker (valueChange)="onDateChange($event)" [value]="dateValue" [labelText]="labelText" [disabled]="disabled" [datePlaceholder]="dateFormat" [format]="dateFormat" #datepicker></bd-datepicker>
+  <bd-datepicker (valueChange)="onDateChange($event)" [value]="dateValue" [labelText]="labelText" [disabled]="disabled" [datePlaceholder]="dateFormat" [format]="dateFormat" [minDate]="minDate" [maxDate]="maxDate" #datepicker></bd-datepicker>
 </div>
