fix bd-form-button component displaying

--- a/src/app/shared/components/bd-buttons/bd-form-button/bd-form-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-form-button/bd-form-button.component.scss
@@ -1,5 +1,9 @@
 @import '../../../../../assets/styles/variables';
 
+:host {
+  display: flex;
+}
+
 .form-button {
   border: 0;
   background: transparent;
