FSPA-420 add DATE_FORMAT constant

--- a/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
@@ -18,7 +18,7 @@
     <div class="bottom">
       <div class="birth">
         <span class="bottom-label">Birth:</span>
-        <span class="date-of-birth">{{driver?.dateOfBirth | date: 'dd/MM/yyyy'}}</span>
+        <span class="date-of-birth">{{driver?.dateOfBirth | date: constants.DATE_FORMAT}}</span>
       </div>
       <div class="ssn">
         <span class="bottom-label">SSN:</span>
