--- a/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.scss
+++ b/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.scss
@@ -1,33 +1,41 @@
 @import '../../../../assets/styles/variables';
 
-.detail-container {
-  .title {
-    display: flex;
-    padding: 0 $default-margin;
-    margin: 25px 0 15px;
-    justify-content: space-between;
-
-    label {
-      font-size: $tiny-font-size;
-      text-transform: uppercase;
-      font-weight: bold;
-      margin-bottom: 0;
-      letter-spacing: 2px;
-      word-spacing: 3px;
-    }
-    
-    .buttons-panel {
-      position: relative;
+:host {
+  .detail-container {
+    .title {
       display: flex;
-      height: 100%;
-      align-items: flex-start;
+      padding: 0 $default-margin;
+      margin: 25px 0 15px;
       justify-content: space-between;
 
-      .add-button,
-      .change-button {
-        display: flex;
-        margin-left: 5px;
+      label {
+        font-size: $tiny-font-size;
+        text-transform: uppercase;
+        font-weight: bold;
+        margin-bottom: 0;
+        letter-spacing: 2px;
+        word-spacing: 3px;
       }
+
+      .buttons-panel {
+        position: relative;
+        display: flex;
+        height: 100%;
+        align-items: flex-start;
+        justify-content: space-between;
+        
+        .add-button,
+        .change-button {
+          display: flex;
+          margin-left: 5px;
+        }
+      }
+    }
+  }
+
+  &:first-of-type {
+    .detail-container {
+      padding-top: 10px;
     }
   }
 }
