FSPA-354 fix form-navigation border

--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -12,7 +12,9 @@ form-navigation {
 
   .form-navigation {
     padding: $default-margin $default-margin 0;
+    border-radius: $default-border-radius;
     background-color: $white;
+    border-bottom: $border;
 
     .top-panel {
       display: flex;
