--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="selectedItem">
-<form-navigation [title]="'Load'" [anchors]="anchors"></form-navigation>
+<form-navigation sticky [title]="'Load'" [anchors]="anchors"></form-navigation>
 <form>
     <navigation-anchor id="customer"></navigation-anchor>
     <bd-view-detail-section [labelText]="'Customer'" [changeButton]="false" [addButton]="false">
