--- a/src/app/drivers/components/driver-edit.component.html
+++ b/src/app/drivers/components/driver-edit.component.html
@@ -3,6 +3,7 @@
   <form-navigation
     [disabled]="isLoading"
     sticky
+    [stickyPositionInsideScroll]="true"
     [title]="'Driver'"
     [anchors]="anchors">
   </form-navigation>
