--- a/src/app/loads/components/load-edit/load-edit.component.html
+++ b/src/app/loads/components/load-edit/load-edit.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="selectedItem">
   <bd-form-spinner *ngIf="isLoading$ | async"></bd-form-spinner>
-  <form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
+  <form-navigation [title]="'Load'" [anchors]="anchors" sticky [stickyPositionInsideScroll]="true"></form-navigation>
   <load-form
     (save)="onItemSave($event)"
     (cancel)="onItemCancel($event)"
