--- a/src/app/shared/components/form-sticky-bottom-container/form-sticky-bottom-container.component.html
+++ b/src/app/shared/components/form-sticky-bottom-container/form-sticky-bottom-container.component.html
@@ -1,3 +1,3 @@
-<div [class.sticky]="sticky" sticky [top]="false">
+<div [class.sticky]="sticky" sticky [stickyPositionInsideScroll]="true" [top]="false">
   <ng-content></ng-content>
 </div>
