--- a/src/app/auth/forms/register-form/register-form.component.scss
+++ b/src/app/auth/forms/register-form/register-form.component.scss
@@ -1,8 +1,4 @@
-@import '../../../../assets/styles/variables';
-@import '../../../../assets/styles/form-control';
-@import '../../../../assets/styles/styles';
-
-.register-form {
+.auth-form {
   .section {
     display: flex;
   }
