--- a/src/app/auth/components/email-confirmation/email-confirmation.component.html
+++ b/src/app/auth/components/email-confirmation/email-confirmation.component.html
@@ -1,5 +1,5 @@
-<div class="email-confirmation-wrapper">
-  <h3 class="text-center">Sign Up</h3>
+<div class="auth-component">
+  <h3>Sign Up</h3>
   <bd-auth-general-form-error *ngIf="isConfirmationFailed"
     [headerText]="'Email Confirmation Is Failed.'">
   </bd-auth-general-form-error>
