--- a/src/app/auth/components/email-was-sent/email-was-sent.component.html
+++ b/src/app/auth/components/email-was-sent/email-was-sent.component.html
@@ -1,5 +1,5 @@
-<div class="email-was-sent-wrapper">
-  <h3 class="text-center">Sign Up</h3>
+<div class="auth-component">
+  <h3>Sign Up</h3>
   <bd-auth-form-message-helper>
     Email sent.<br/>
     An email with a link to registration has been sent to the address you have provided.
