--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,9 +1,8 @@
-<div class="login-form-wrapper">
-  <h3 class="text-center">Log In</h3>
+<div class="auth-component">
+  <h3>Log In</h3>
   <bd-login-form [viewMode]="formViewMode"></bd-login-form>
-  <div class="links-wrapper text-center">
+  <div class="auth-component-footer">
     <a [routerLink]="['/auth/register']">Register</a>
-    <a href="#">Forgot Password</a>
+    <a [routerLink]="['/auth/password-recovery']">Forgot Password</a>
   </div>
 </div>
-
