--- a/src/app/auth/components/phone-confirmation/phone-confirmation.component.html
+++ b/src/app/auth/components/phone-confirmation/phone-confirmation.component.html
@@ -1,7 +1,7 @@
-<div class="phone-confirmation-form-wrapper">
-  <h3 class="text-center">Sign Up</h3>
+<div class="auth-component">
+  <h3>Sign Up</h3>
   <bd-phone-confirmation-form [viewMode]="formViewMode"></bd-phone-confirmation-form>
-  <div class="text-wrapper text-center">
-    Resend the code in 1:59
+  <div class="auth-component-footer">
+    <span>Resend the code in 1:59</span>
   </div>
 </div>
