--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,7 +1,7 @@
-<div class="register-form-wrapper">
-  <h3 class="text-center">Sign Up</h3>
+<div class="auth-component">
+  <h3>Sign Up</h3>
   <bd-register-form [viewMode]="formViewMode"></bd-register-form>
-  <div class="links-wrapper text-center">
+  <div class="auth-component-footer">
     <a [routerLink]="['/auth/login']">
     Already registered?
     Login</a>
