--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -27,7 +27,7 @@ $filter-header-max-width: 85px;
         align-items: center;
       }
 
-      .ps-active-x > .ps-scrollbar-x-rail {
+      .ps-scrollbar-x-rail {
         bottom: 2px !important;
       }
       //sass-lint:enable no-important
