--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="selectedItem">
-  <bd-button class="add-button" [color]="'primary'" [text]="'Edit'" (click)="onEdit()">
-  </bd-button>
-  <!--<form-navigation
-    sticky
-    [title]="'Driver'"
-    [anchors]="anchors">
-  </form-navigation>-->
+  <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="selectedItem.name" [anchors]="anchors">
+  </form-navigation>
+  <div class="company-detail-container">
+    <bd-button class="add-button" [color]="'primary'" [text]="'Edit'" (click)="onEdit()">
+    </bd-button>
+    <navigation-anchor id="basic-information"></navigation-anchor>
+    <company-basic-information [company]="selectedItem"></company-basic-information>
+  </div>
 </div>
