--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -3,6 +3,7 @@
     <equipment-cards [selected]="selected" (select)='onSelect($event)' [equipments]="items"></equipment-cards>
   </first-pane>
   <second-pane>
+     <equipment-detail> </equipment-detail>
   </second-pane>
   <third-pane>
     <router-outlet></router-outlet>
