FSPA-457 #comment update company model, added part of view, show mock data inside component, changed margins in driver detail child components

--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="selectedItem">
+  <!-- <bd-button class="add-button" [color]="'primary'" [text]="'Edit'" (click)="onEdit()">
+  </bd-button> -->
   <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="selectedItem.name" [anchors]="anchors">
   </form-navigation>
   <div class="company-detail-container">
-    <bd-button class="add-button" [color]="'primary'" [text]="'Edit'" (click)="onEdit()">
-    </bd-button>
     <navigation-anchor id="basic-information"></navigation-anchor>
+    <bd-view-detail-section [labelText]="'BASIC INFORMATION'" [addButton]="false">
     <company-basic-information [company]="selectedItem"></company-basic-information>
+  </bd-view-detail-section>
   </div>
 </div>
