--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.html
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.html
@@ -2,11 +2,18 @@
   <div class="left">
     <div class="cropped-company-name">{{this.croppedCompanyName}}</div>
     <div class="name-type">
-      <div class="name">{{this.company.name}}</div>
-        <div class="type"></div>
+      <div class="name">{{company.name}}</div>
+        <div class="type">{{typeText}}</div>
     </div>
   </div>
   <div class="right">
-    right
+    <div class="mc-container">
+      <span class="right-label">MC#:</span>
+      <span class="mc">{{company.mc}}</span>
+    </div>
+    <div class="tax-id-container">
+      <span class="right-label">Tax-ID (W9):</span>
+      <span class="tax-id">{{company.taxId}}</span>
+    </div>
   </div>
 </div>
