--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -85,6 +85,7 @@ $top-panel-icon-size: 19px;
 /* form control height */
 $form-control-height: 40px;
 $horizontal-scroll-container-height: 43px;
+$view-mode-element-height: 35px;
 
 /* top panel height */
 $top-panel-height: 50px;
