FSPA-453 refactor general equipment files, add routes for equipment

--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -1,7 +1,8 @@
 <div
 class="card-section"
 (mouseover)="onEnter()"
-(mouseleave)="onLeave()">
+(mouseleave)="onLeave()"
+(click)="onClick()">
   <div class="left">
     <bd-initials-circle
       class="initials-circle"
