--- a/src/app/equipment/components/equipment-detail/equipment-detail.component.html
+++ b/src/app/equipment/components/equipment-detail/equipment-detail.component.html
@@ -1,22 +1,21 @@
 <div>
-  <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="driverFullName" [anchors]="anchors">
-      <bd-form-button [buttonText]="'change'" buttonType="small" (click)="onEdit()">
-      </bd-form-button>
+  <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="equipmentInfo" [anchors]="anchors">
   </form-navigation>
-  <div class="driver-detail-container">
-    <navigation-anchor id="information"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'INFORMATION'" [addButton]="false" [changeButton]="false">
-      <driver-information [driver]="selectedItem">
-      </driver-information>
+  <div class="equipment-detail-container">
+
+    <navigation-anchor id="employment"></navigation-anchor>
+    <bd-view-detail-section [labelText]="'EMPLOYMENT'" [addButton]="false" [changeButton]="false">
+      <equipment-employment [equipment]="selectedItem"></equipment-employment>
     </bd-view-detail-section>
-    <navigation-anchor id="equipment-associations"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'EQUIPMENT ASSOCIATIONS'" [addButton]="false" [changeButton]="false">
-      <driver-equipment-associations *ngFor="let associatedEquipment of selectedItem.associatedEquipments" [associatedEquipment]="associatedEquipment"></driver-equipment-associations>
-      <driver-payment-type [driver]="selectedItem"></driver-payment-type>
+
+    <navigation-anchor id="assignment"></navigation-anchor>
+    <bd-view-detail-section [labelText]="'ASSIGNMENT'" [addButton]="false" [changeButton]="false">
+      <equipment-assignment [equipment]="selectedItem"></equipment-assignment>
     </bd-view-detail-section>
-    <navigation-anchor id="license"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'License'" [addButton]="false" [changeButton]="false">
-      <driver-license [driver]="selectedItem"></driver-license>
+
+    <navigation-anchor id="details"></navigation-anchor>
+    <bd-view-detail-section [labelText]="'EQUIPMENT DETAILS'" [addButton]="false" [changeButton]="false">
+      <equipment-details [equipment]="selectedItem"></equipment-details>
     </bd-view-detail-section>
   </div>
 </div>
