FSPA-453 edit employment component: add input data, refactor styles

--- a/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
@@ -1,25 +1,24 @@
 <div class="employment-container">
     <section class="general-info">
         <div class="vin">
-            <span class="label">VIN:</span>
-            <span class="value">435345636366</span>
+            <span class="value">VIN: {{equipment.vin}}</span>
         </div>
         <div class="mode">
-            <span class="value">Company Equipment</span>
+            <span class="value">{{equipmentOwnership}}</span>
         </div>
         <div class="sub-mode">
-            <span class="value">Purchased</span>
+            <span class="value"></span>
         </div>
     </section>
     <section class="vehicle-info">
         <div class="type">
-            <span class="value">Power Unit</span>
+            <span class="value">{{equipmentType}}</span>
         </div>
         <div class="sub-type">
-            <span class="value">Tractor</span>
+            <span class="value">{{equipmentSubType}}</span>
         </div>
         <div class="owned-mode">
-            <span class="value">InterState</span>
+            <span class="value">{{vehicleOperating}}</span>
         </div>
     </section>
 </div>
